@@ -3,6 +3,9 @@ Revision history for Perl module Module::Loader
 0.03 2014-10-07 NEILB
     - I was using my pod extension M<...> (from Text::Markdown::PerlExtensions)
       instead of L<...>. Thanks to GRANTM and OALDERS for reporting this.
+    - Made max_depth immutable, as suggested by LEONT++, and pull request from
+      KENTNL++. You can pass it to the constructor, or as an option
+      when calling find_modules().
 
 0.02 2014-10-06 NEILB
     - Added a search() method, for full compatibility with Mojo::Loader.
